backport: re PR tree-optimization/59014 (wrong code at -Os and above on x86_64-linux-gnu)

Backported from mainline
	2013-11-27  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/59014
	* gcc.c-torture/execute/pr59014-2.c: New test.

	2013-11-26  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/59014
	* tree-vrp.c (register_edge_assert_for_1): Don't look
	through conversions from non-integral types or through
	narrowing conversions.

	* gcc.c-torture/execute/pr59014.c: New test.

From-SVN: r210177